fixed vertical scrollbar

--- a/static/css/sass/imports/_logo.scss
+++ b/static/css/sass/imports/_logo.scss
@@ -1,5 +1,7 @@
 .cssconf-logo {
   position: relative;
+  max-width: 100%;
+  overflow: hidden;
   font-size: 3em;
   line-height: 1.2;
   padding: .5em 0 0;
